--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paper-design/shaders-react": "^0.0.29",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "embla-carousel-react": "^8.6.0",
