--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "three": "^0.176.0"
   },
   "devDependencies": {
